samples/_failures_safe/1761006171_365394_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0c2dec5.c: In function ‘main’:
./samples/SAFE/__tmp_e0c2dec5.c:164:29: error: missing terminating " character
  164 |     const char *test_data = "This is a sample text for compression
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e0c2dec5.c:164:5: error: expected expression at end of input
  164 |     const char *test_data = "This is a sample text for compression
      |     ^~~~~
./samples/SAFE/__tmp_e0c2dec5.c:164:5: error: expected declaration or statement at end of input
